Bug 834059 - Send processses into the foreground when they first launch, so they don't get killed quite so quickly. r=cjones

This patch also sends the preallocated process into the background immediately after it's launched.